--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,6 +3,12 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -12,7 +18,7 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 build.web.dir=${build.dir}/web
 build.web.excludes=${build.classes.excludes}
-client.urlPart=
+client.urlPart=/index.jsp
 compile.jsps=false
 conf.dir=${source.root}/conf
 debug.classpath=${build.classes.dir}:${javac.classpath}
@@ -29,6 +35,9 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.mysql-connector-java-8.0.26.jar=F:\\New Project\\chatp\\chemist\\lib\\mysql-connector-java-8.0.26.jar
+file.reference.qrgen-1.2.jar=F:\\project\\qrcode\\build\\web\\WEB-INF\\lib\\qrgen-1.2.jar
+file.reference.zxing-core-1.7.jar=F:\\project\\qrcode\\build\\web\\WEB-INF\\lib\\zxing-core-1.7.jar
+file.reference.zxing-j2se-1.7.jar=F:\\project\\qrcode\\build\\web\\WEB-INF\\lib\\zxing-j2se-1.7.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,7 +47,10 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.26.jar}
+    ${file.reference.mysql-connector-java-8.0.26.jar}:\
+    ${file.reference.qrgen-1.2.jar}:\
+    ${file.reference.zxing-core-1.7.jar}:\
+    ${file.reference.zxing-j2se-1.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
