--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -18,7 +18,7 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 build.web.dir=${build.dir}/web
 build.web.excludes=${build.classes.excludes}
-client.urlPart=/index.jsp
+client.urlPart=/food_login.jsp
 compile.jsps=false
 conf.dir=${source.root}/conf
 debug.classpath=${build.classes.dir}:${javac.classpath}
@@ -34,6 +34,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.jstl-1.2.jar=F:\\New Project\\chatp\\chemist\\build\\web\\WEB-INF\\lib\\jstl-1.2.jar
 file.reference.mysql-connector-java-8.0.26.jar=F:\\New Project\\chatp\\chemist\\lib\\mysql-connector-java-8.0.26.jar
 file.reference.qrgen-1.2.jar=F:\\project\\qrcode\\build\\web\\WEB-INF\\lib\\qrgen-1.2.jar
 file.reference.zxing-core-1.7.jar=F:\\project\\qrcode\\build\\web\\WEB-INF\\lib\\zxing-core-1.7.jar
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.26.jar}:\
     ${file.reference.qrgen-1.2.jar}:\
     ${file.reference.zxing-core-1.7.jar}:\
-    ${file.reference.zxing-j2se-1.7.jar}
+    ${file.reference.zxing-j2se-1.7.jar}:\
+    ${file.reference.jstl-1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
